# hummel-it-frame

./: LICENSE  NOTICE  README.md  pyproject.toml
docs/: architecture.md  development.md  lastenheft.md  pflichtenheft-v0.1.md  roadmap.md  testing.md
packaging/systemd/: README.md  hummel-it-frame-display.service  hummel-it-frame.service
scripts/: install.sh
src/hummel_it_frame/: __init__.py  main.py
src/hummel_it_frame/config/: __init__.py  settings.py
src/hummel_it_frame/display/: __init__.py  logic.py  service.py
src/hummel_it_frame/storage/: __init__.py  service.py
src/hummel_it_frame/web/: app.py  dependencies.py  routes.py
tests/: conftest.py  test_app.py  test_config.py  test_display.py  test_packaging.py  test_storage.py
