[project]
name = "hummel-it-frame"
version = "0.1.0"
description = "Self-hosted digital picture frame platform for Raspberry Pi devices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pygame",
    "pydantic",
    "pyyaml",
]

[project.scripts]
hummel-it-frame = "hummel_it_frame.main:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hummel_it_frame"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
